--- a/style.css
+++ b/style.css
@@ -315,3 +315,236 @@ text-align: center;
 color: #000;
 }
 
+
+
+.active{ 
+    position: relative;
+}
+
+.active::after{ 
+
+    content: '';
+    background: #fff;
+    width: 27px; 
+    position: absolute; 
+    left: 50%; 
+    border-radius: 2px; 
+    transform: translateX(-50%); 
+    bottom: -10px;
+    height: 2px;
+} 
+
+nav .fa-bars{ 
+ display: none; 
+ 
+}
+
+
+/* -------small screen styling---- */
+@media only screen and (max-width: 700px) {
+    .logo{ 
+        position: fixed;  
+        top: 4%; 
+        left: 7%;
+    }   
+    
+    nav{ 
+        position: fixed; 
+        top: 0; 
+        z-index: 100; 
+        display: inline-block; 
+        width: 100%; 
+        padding: 100px 7% 0; 
+        text-align: right; 
+        max-height: 100px; 
+        overflow: hidden; 
+        transition: max-height 0.5s;
+    } 
+
+
+    nav .nav-links li{ 
+        margin: 10px 0; 
+        display: block;
+
+    }
+
+    .register-btn{ 
+        margin: 15px 0 30px; 
+        display: inline-block;
+    }
+
+    nav .fa-bars{ 
+    display: block;
+    position: fixed; 
+    top: 4%; 
+    right: 7%; 
+    color: #fff; 
+    font-size: 28px;
+    }
+
+
+    .active::after{ 
+        left: -45px; 
+        transform: translate(0, 50%); 
+        bottom: -10px;
+        
+    }  
+    .hidemenu{
+        max-height: 300px;
+    }
+
+    .header h1{ 
+        padding-top: 300px; 
+        font-size: 7vw;
+    } 
+
+    .search-bar{ 
+        width: 90%;
+        margin: 30px auto; 
+        padding: 20px 10px 30px; 
+        border-radius: 5px; 
+        position: relative;
+    } 
+
+
+    .search-bar form{ 
+        display: block;
+    }
+
+    .search-bar form input{ 
+        border-bottom: 1px solid #ddd;
+        width: 100%; 
+        margin-bottom: 20px; 
+        margin-top: 10px; 
+        padding-bottom: 10px;
+    } 
+
+    
+    .search-bar form button{ 
+        position: absolute; 
+        bottom: 0; 
+        left: 50%; 
+        transform: translate(-50%, 50%);
+    } 
+
+    .sub-title{ 
+        font-size: 6vw;
+    } 
+
+    .cta{ 
+        padding: 15% 5%;
+    }
+
+    .cta h3{ 
+        font-size: 7vw; 
+        line-height: 8vw;
+    } 
+
+    .cta p{  
+        font-size: 15px;
+
+    } 
+
+    .cta-btn{ 
+        padding: 6px 15px; 
+        border-radius: 4px; 
+        margin-top: 10px; 
+        font-size: 14px;
+
+    } 
+
+    .stories p{ 
+        font-size: 22px;
+    }
+
+    .about-us{ 
+        font-size: 15px;
+    }
+
+
+}
+
+
+
+
+/* 
+---------This is the listing section------- */
+
+.navbar-list{ 
+    background: #fff; 
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.navbar-list .nav-links li a{ 
+    color: #000;
+} 
+
+
+.navbar-list .register-btn{ 
+    color: #fff; 
+    background: #ff5361;
+}
+
+nav.navbar-list  .fa-bars{ 
+    color: #000;
+} 
+
+
+.navbar-list .active::after{ 
+    background: #ff5361;
+} 
+
+
+.list-container{ 
+    margin-top: 50px; 
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    
+} 
+
+.left-col{ 
+    flex-basis: 70%; 
+    
+} 
+
+.right-col{ 
+    flex-basis: 25%;
+}  
+ 
+
+
+.left-col h1{ 
+    color: #333; 
+    font-weight: 600; 
+    margin-bottom: 30px;
+} 
+
+.house{ 
+    display: flex; 
+    justify-content: space-between; 
+    flex-wrap: wrap; 
+    padding: 30px 0; 
+    border-top: 5px solid #ccc;
+} 
+
+.house-img{ 
+    flex-basis: 40%;
+} 
+
+.house-info{ 
+    flex-basis: 58%;
+    color: #555; 
+   
+}
+
+
+.house-img img{ 
+    width: 100%; 
+    border-radius: 15px;
+}
+
+.house-info h3{ 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
